Documentation/Scripts/ex5.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex5
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ex5
  template:
    metadata:
      labels:
        app: ex5
    spec:
      containers:
      - name: ex5
        image: gcr.io/google-samples/kubernetes-bootcamp:v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ex5
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: ex5
