Documentation/Scripts/loadbalancer-demo.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 24/04/2024        #
############################
---
apiVersion: v1
kind: Service
metadata:  
  name: my-loadbalancer-service
spec:
  selector:    
    app: my-app
  type: LoadBalancer
  ports:  
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
