Documentation/Scripts/ingress-demo.yaml
############################
# @author Elias De Hondt   #
# @see https://eliasdh.com #
# @since 25/04/2024        #
############################
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  backend:
    serviceName: other
    servicePort: 8080
  rules:
  - host: foo.demo-cs2.eliasdh.com
    http:
      paths:
      - backend:
          serviceName: foo
          servicePort: 8080
  - host: demo-cs2.eliasdh.com
    http:
      paths:
      - path: /bar/*
        backend:
          serviceName: bar
          servicePort: 8080
